Protect Swagger route Add routes to Swagger
